--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
             }
             @media (min-width: 992px) { header p{ text-align: justify; text-justify: inter-word; } }
         </style>
-        <title>Reemplaza este título que se muestra en la ventana de tu navegador</title>
+        <title>Alberto Lucas López</title>
     </head>
     <body>
         <header class="container">
             <div class="row py-4">
                 <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
 
-                    <h1 class="mb-3 mt-5 text-center display-5 ">Reemplaza este título</h1>
+                    <h1 class="mb-3 mt-5 text-center display-5 ">Alberto Lucas López</h1>
 
-                    <h2 class="mb-5 text-center text-uppercase fs-5">Nombre Apellido</h2>
+                    <h2 class="mb-5 text-center text-uppercase fs-5">Nicolás Gaona</h2>
 
-                    <p class="lead">Reemplaza este párrafo con un texto introductorio, de una extensión máxima de cien palabras. En este y todos los reemplazos, respeta los colores del código fuente en tu editor. Los colores son indicaciones. Imagina que el editor de código fuente te está indicando: En el lenguaje que reconozco, esto es algo que no debes confundir con eso.</p>
+                    <p class="lead">Mientras cursaba periodismo en Navarra, Lucas Alberto descubrió el arte de la infografía, la primera clase fue sorprendido por los conceptos básicos d la materia. Y ya en la segunda se percató que la infografía es periodismo. De ahí en adelante se volvió un adicto y fanatico del mundo de las infografías y desde ese entonces se dedica a hacerlas.</p>
 
-                    <p>Reemplaza este párrafo con un texto que complemente al introductorio. Puedes extender este párrafo hasta las doscientas palabras. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque ultricies elit eu pellentesque. Fusce a justo pellentesque, scelerisque tellus in, aliquet est. Curabitur nec porttitor nunc. Nullam elementum orci eget rhoncus congue. Proin quis laoreet tellus. Vivamus molestie ullamcorpernisi, sed aliquet magna molestie id. Vivamus semper ipsum eget.</p>
+                    <p>Alberto Lucas ha ganado multiples premios debido a sus excelentes infografías, desde reconocimientos del South China Morning Post hasta varios premios Malofiej. Podemos decir entonces que, Alberto es de pies a cabeza un excelente infografista y aquí abajo les dejo un par de sus admirables trabajos.</p>
 
                 </div>
             </div>
@@ -40,74 +40,44 @@
                 <!--primera imagen-->
                 <div class="col-12 col-sm-6">
                     <figure class="bg-black">
-                        <img loading="lazy" src="img/reemplaza-esta-imagen.gif" class="w-100" alt="describe lo que se ve en la imagen" />
-                        <figcaption class="p-3">Reemplaza el texto en este pie de foto.</figcaption>
+                        <img loading="lazy" src="img/Info1.jpg" class="w-100" alt="Infografía sobre cuales son los idiomas más hablados en el mundo" />
+                        <figcaption class="p-3">A world of languages.</figcaption>
                     </figure>
                 </div>
                 <!--segunda imagen-->
                 <div class="col-12 col-sm-6">
                     <figure class="bg-black">
-                        <img loading="lazy" src="img/reemplaza-esta-imagen.gif" class="w-100" alt="describe lo que se ve en la imagen" />
-                        <figcaption class="p-3">Reemplaza el texto en este pie de foto.</figcaption>
+                        <img loading="lazy" src="img/Info2.jpg" class="w-100" alt="Infografía sobre varias películas que fueron grabadas o tuvieron alguna escena en Hong Kong" />
+                        <figcaption class="p-3">lights, camera, action!</figcaption>
                     </figure>
                 </div>
                 <!--tercera imagen-->
                 <div class="col-12 col-sm-6">
                     <figure class="bg-black">
-                        <img loading="lazy" src="img/reemplaza-esta-imagen.gif" class="w-100" alt="describe lo que se ve en la imagen" />
-                        <figcaption class="p-3">Reemplaza el texto en este pie de foto.</figcaption>
+                        <img loading="lazy" src="img/Info3.jpg" class="w-100" alt="Infografía sobre la esgrima y la halterofilia" />
+                        <figcaption class="p-3">Esgrima y Halterofilia.</figcaption>
                     </figure>
                 </div>
                 <!--cuarta imagen-->
                 <div class="col-12 col-sm-6">
                     <figure class="bg-black">
-                        <img loading="lazy" src="img/reemplaza-esta-imagen.gif" class="w-100" alt="describe lo que se ve en la imagen" />
-                        <figcaption class="p-3">Reemplaza el texto en este pie de foto.</figcaption>
+                        <img loading="lazy" src="img/Info4.jpg" class="w-100" alt="Infografía sobre como se vería Hong Kong si subiesen los niveles del agua debido al calentamiento global" />
+                        <figcaption class="p-3">Under the sea.</figcaption>
                     </figure>
                 </div>
                 <!--quinta imagen-->
                 <div class="col-12 col-sm-6">
                     <figure class="bg-black">
-                        <img loading="lazy" src="img/reemplaza-esta-imagen.gif" class="w-100" alt="describe lo que se ve en la imagen" />
-                        <figcaption class="p-3">Reemplaza el texto en este pie de foto.</figcaption>
+                        <img loading="lazy" src="Info5.png" class="w-100" alt="Messi" />
+                        <figcaption class="p-3">Messi.</figcaption>
                     </figure>
                 </div>
                 <!--sexta imagen-->
                 <div class="col-12 col-sm-6">
                     <figure class="bg-black">
-                        <img loading="lazy" src="img/reemplaza-esta-imagen.gif" class="w-100" alt="describe lo que se ve en la imagen" />
-                        <figcaption class="p-3">Reemplaza el texto en este pie de foto.</figcaption>
+                        <img loading="lazy" src="Info6.jpg" class="w-100" alt="Esta Infografía compara los tamaños de distintos edificios y monumentos historicos" />
+                        <figcaption class="p-3">The height of social values.</figcaption>
                     </figure>
-                </div>
-                <!--séptima imagen-->
-                <div class="col-12 col-sm-6">
-                    <figure class="bg-black">
-                        <img loading="lazy" src="img/reemplaza-esta-imagen.gif" class="w-100" alt="describe lo que se ve en la imagen" />
-                        <figcaption class="p-3">Reemplaza el texto en este pie de foto.</figcaption>
-                    </figure>
-                </div>
-                <!--octava imagen-->
-                <div class="col-12 col-sm-6">
-                    <figure class="bg-black">
-                        <img loading="lazy" src="img/reemplaza-esta-imagen.gif" class="w-100" alt="describe lo que se ve en la imagen" />
-                        <figcaption class="p-3">Reemplaza el texto en este pie de foto.</figcaption>
-                    </figure>
-                </div>
-                <!--novena imagen-->
-                <div class="col-12 col-sm-6">
-                    <figure class="bg-black">
-                        <img loading="lazy" src="img/reemplaza-esta-imagen.gif" class="w-100" alt="describe lo que se ve en la imagen" />
-                        <figcaption class="p-3">Reemplaza el texto en este pie de foto.</figcaption>
-                    </figure>
-                </div>
-                <!--décima imagen-->
-                <div class="col-12 col-sm-6">
-                    <figure class="bg-black">
-                        <img loading="lazy" src="img/reemplaza-esta-imagen.gif" class="w-100" alt="describe lo que se ve en la imagen" />
-                        <figcaption class="p-3">Reemplaza el texto en este pie de foto.</figcaption>
-                    </figure>
-                </div>
-                <!--no hay más imágenes-->
             </div>
         </main>
 
@@ -117,7 +87,7 @@
                     <div class="col-12">
                         <p class="d-flex justify-content-between small p-1 m-0">
                             <!--reemplaza el # que sigue con la URL de tu cuenta en GitHub-->
-                            <a href="#" class="link-light">Nombre Apellido</a>
+                            <a href="https://github.com/NicoGaona" class="link-light">Nicolás Gaona</a>
                             <a href="https://github.com/profesorfaco/dno075-2022-1/" class="link-light">Infografía Digital</a>
                             <a href="https://github.com/profesorfaco/dno075-2022-1/tree/main/clase-02" class="d-none d-lg-inline link-light">Lunes 14 de marzo, 2022</a>
                         </p>
