--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                         <img loading="lazy" src="Info6.jpg" class="w-100" alt="Esta Infografía compara los tamaños de distintos edificios y monumentos historicos" />
                         <figcaption class="p-3">The height of social values.</figcaption>
                     </figure>
+                </div>
             </div>
         </main>
 
