--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
                 <!--quinta imagen-->
                 <div class="col-12 col-sm-6">
                     <figure class="bg-black">
-                        <img loading="lazy" src="Info5.png" class="w-100" alt="Messi" />
+                        <img loading="lazy" src="img/Info5.png" class="w-100" alt="Messi" />
                         <figcaption class="p-3">Messi.</figcaption>
                     </figure>
                 </div>
                 <!--sexta imagen-->
                 <div class="col-12 col-sm-6">
                     <figure class="bg-black">
-                        <img loading="lazy" src="Info6.jpg" class="w-100" alt="Esta Infografía compara los tamaños de distintos edificios y monumentos historicos" />
+                        <img loading="lazy" src="img/Info6.jpg" class="w-100" alt="Esta Infografía compara los tamaños de distintos edificios y monumentos historicos" />
                         <figcaption class="p-3">The height of social values.</figcaption>
                     </figure>
                 </div>
